--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
                 </configuration>
                 <dependencies>
                     <dependency>
+                        <groupId>com.google.code.gson</groupId>
+                        <artifactId>gson</artifactId>
+                        <version>2.8.8</version>
+                    </dependency>
+                    <dependency>
                         <groupId>org.jetbrains.kotlin</groupId>
                         <artifactId>kotlin-maven-serialization</artifactId>
                         <version>${kotlin.version}</version>
